manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gotodo-prd
  name: gotodo
  labels:
    app: gotodo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotodo
  template:
    metadata:
      labels:
        app: gotodo
    spec:
      containers:
      - name: gotodo
        image: rindrics/gotodo-application:v1.1.0
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gotodo-prd
  name: gotodo-mysql
  labels:
    app: gotodo-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotodo-mysql
  template:
    metadata:
      labels:
        app: gotodo-mysql
    spec:
      containers:
      - name: gotodo-mysql
        image: rindrics/gotodo-database:v1.1.0
        volumeMounts:
          - name: gotodo-mysql-config
            mountPath: /etc/mysql/conf.d:cached
        ports:
          - containerPort: 3306
      volumes:
        - name: gotodo-mysql-config
          configMap:
            name: gotodo-mysql
