manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotodo
spec:
  selector:
    app: gotodo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gotodo-mysql
spec:
  selector:
    app: gotodo-mysql
  ports:
    - protocol: TCP
      port: 33306
      targetPort: 3306
