manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gotodo-prd
  name: gotodo-mysql
spec:
  selector:
    app: gotodo-mysql
  ports:
    - protocol: TCP
      port: 33306
      targetPort: 3306
